Initial commit for Juan

--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head>
 	<title>BACON</title>
 </head>
 <body>
-<p> Juan and Jenna are great. I am excited to go to Santa Cruz. I also want to eat Ben & Jerry's. </p>
-<p> I am planning on going to the Himalayas to go climbing. To do this I have to learn climbing basics. </p>
+	<h1>Melanies practice page</h1>
+	<p> Juan and Jenna are great. I am excited to go to Santa Cruz. I also want to eat Ben & Jerry's. </p>
+	<p> I am planning on going to the Himalayas to go climbing. To do this I have to learn climbing basics. </p>
 </body>
 </html>
